java-was-app/deployments/Service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: "myecommerceapp"
    backstage.io/kubernetes-id: "myecommerceapp"
  name: "myecommerceapp"
spec:
  ports:
    - name: http
      port: 9080
      targetPort: 9080
  selector:
    deployment: "myecommerceapp"
